--- a/style.css
+++ b/style.css
@@ -3,16 +3,27 @@
     margin: 0 auto;
     padding: 0;
     
+    
 }
 
 header
 {
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(/Users/rhiantaylor/Desktop/IMG_7864.jpeg);
-    height: 150vh;
+    height:  200vh;
     background-size: cover;
-    background-position: center;
+    background-position: center; 
+    
 
 }
+
+/*.bg
+{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(/Users/rhiantaylor/Desktop/IMG_7864.jpeg);
+    height:  100%;
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat;
+}*/
 
 .main-nav
 {
@@ -31,7 +42,7 @@ header
 {
     color: aliceblue;
     text-decoration: none;
-    padding: 5px 20px;
+    padding: 5px 30px;
     font-family: fantasy;
     font-size: 15px;
 }
@@ -48,17 +59,18 @@ header
 
 .menu
 {
-    max-width: 1200px;
+    max-width: 100% /*1200px*/;
     margin: auto;
 }
 
 .FY 
 {
     
-    width: 1200px;
+    width: 100% /*1200px*/;
     margin-left: 0px;
     margin-top: 0px;
     position: absolute;
+    
 }
 
 h1
@@ -73,15 +85,17 @@ h1
 
 .button
 {
-    margin-top: 30px;
-    margin-left: 440px;
+    margin-top: -7.5%;
+    margin-left: 2.5% ;
+    position: absolute;
+    
     
 }
 
 .btn
 {
     border: 1px solid aliceblue;
-    padding: 10px 30px;
+    padding: 10px 35px;
     color: aliceblue;
     margin-right: 5px;
     font-size: 10px;
