--- a/web_contents/practice.css
+++ b/web_contents/practice.css
@@ -1,10 +1,10 @@
+/* My Project CSS file*/
 * {
     margin: 0 auto;
     padding: 0;
     font-family: 'Oxygen', sans-serif;
 
 }
-
 
 body {
     background-color: #726568;
@@ -120,3 +120,4 @@ p {
     background: #423538;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
+
