--- a/web_contents/practice.css
+++ b/web_contents/practice.css
@@ -139,10 +139,27 @@ p {
     background: #a9a2a4;
 }
 
-a{
-    color:  #865f66;
+a {
+    color: #865f66;
 }
 
-a:hover{
-    color:#dfd2d5;
+a:hover {
+    color: #dfd2d5;
+}
+
+.how-section1 {
+    margin-top: -15%;
+    padding: 10%;
+}
+
+.how-section1 .row {
+    margin-top: 10%;
+}
+
+.how-img {
+    text-align: center;
+}
+
+.how-img img {
+    width: 40%;
 }
